--- a/estilos/css/animaciones/animaciones.css
+++ b/estilos/css/animaciones/animaciones.css
@@ -12,3 +12,5 @@
 
 @import url("./animaciones_estrellas.css");
 @import url("./animaciones_3d.css");
+@import url("./test/animaciones.css");
+@import url("./animaciones_de_textos/animaciones_de_textos.css");
