--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -1,7 +1,4 @@
-/** @format */
-
-@import url("./configuracion.css");
-@import url("./general.css");
-@import url("./movil.css");
-
-@import url("./css/principal.css");
+@import url('./configuracion.css');
+@import url('./css/principal.css');
+@import url('./movil.css');
+@import url('./general.css');
