--- a/estilos/css/animaciones/animaciones_movimiento.css
+++ b/estilos/css/animaciones/animaciones_movimiento.css
@@ -1,233 +1,57 @@
-/* ============================================= */
+/**
+ * =============================================
+ *
+ * @format
+ */
+
 /* ANIMACIONES DE MOVIMIENTO */
 /* ============================================= */
 
 /* Animación para mover de izquierda a derecha */
 @keyframes moverIzquierdaDerecha {
-	0%,
-	100% {
-		left: 0;
-	}
-	50% {
-		left: -10px;
-	}
+  0%,
+  100% {
+    left: 0;
+  }
+  50% {
+    left: -10px;
+  }
 }
 
 /* Animación para mover de derecha a izquierda */
 @keyframes moverDerechaIzquierda {
-	0%,
-	100% {
-		right: 0;
-	}
-	50% {
-		right: -10px;
-	}
+  0%,
+  100% {
+    right: 0;
+  }
+  50% {
+    right: -10px;
+  }
 }
 
-
-
-/* Animación para crear un efecto de resplandor */
-@keyframes glow {
-	0% {
-		text-shadow: 1px 1px 5px var(--color-paleta-principal1), 0 0 10px var(--color-paleta-principal5),
-			0 0 15px #ffef00, 0 0 20px var(--color-paleta-principal4),
-			0 0 25px var(--color-paleta-principal2), 0 0 30px var(--color-paleta-principal5),
-			0 0 35px #ffef00;
-	}
-	50% {
-		text-shadow: 0 0 10px var(--color-paleta-principal1), 0 0 20px var(--color-paleta-principal1),
-			0 0 30px #ffef00, 0 0 40px #ffef00, 0 0 50px var(--color-paleta-principal2),
-			0 0 60px var(--color-paleta-principal1), 0 0 70px #ffef00;
-	}
-	100% {
-		text-shadow: 0 0 5px var(--color-paleta-principal1), 0 0 10px var(--color-paleta-principal1),
-			0 0 15px var(--color-paleta-principal4), 0 0 20px var(--color-paleta-principal4),
-			0 0 25px #ffef00, 0 0 30px #ffef00, 0 0 35px var(--color-paleta-principal4);
-	}
+.animacion__resplandor {
+  animation: resplandor 2s infinite;
+  color: var(--color-paleta5);
+  font-size: 1.5rem;
+  text-align: center;
+  margin: 20px 0;
 }
 
-/* Animación para crear un efecto de aparecer y hacer zoom */
-@keyframes fadeInZoom {
-	0% {
-		opacity: 0;
-		transform: scale(0.5);
-	}
-	100% {
-		opacity: 1;
-		transform: scale(1);
-	}
-}
-
-/* Animación para el efecto de escribir */
-@keyframes typing {
-	from {
-		width: 0;
-	}
-	to {
-		width: 100%;
-	}
-}
-
-/* Animación para el parpadeo del cursor */
-@keyframes blink-caret {
-	from,
-	to {
-		border-color: transparent;
-	}
-	50% {
-		border-color: var(--color-paleta-principal2);
-	}
-}
-
-/* Estilo y animaciones para el texto animado con zoom */
-.textoanimadoInZoom {
-	font-family: "Roboto", sans-serif;
-	text-align: center;
-	transform: scale(0.5);
-	animation: fadeInZoom 2s ease forwards, typing 4s steps(30, end) 2s forwards,
-		blink-caret 0.75s step-end infinite 6s;
-	transition: text-shadow 0.5s, transform 0.5s;
-}
-.typing {
-	transform: scale(0.5);
-	animation: typing 4s steps(30, end) 2s infinite, blink-caret 0.75s step-end infinite 6s;
-	transition: text-shadow 0.5s, transform 0.5s;
-}
-
-.textoanimadoInZoom:hover {
-	text-shadow: 0px 0px 2px var(--color-paleta-principal4), -3px -3px 2px #00ffff,
-		0px -3px var(--color-paleta-principal4), -3px 1px 0 var(--color-paleta-principal5);
-	transform: scale(1.1);
-	color: var(--color-paleta-principal4), var(--color-paleta-principal4);
-}
-
-/* Estilo y animaciones combinadas */
-.combined-effects {
-	text-align: center;
-	animation: fadeIn 2s forwards;
-	opacity: 0;
-}
-
-.combined-effects h2,
-.combined-effects h3 {
-	font-size: 1.6rem;
-	position: relative;
-}
-
-.combined-effects h2 {
-	animation: pulse 3s 4s infinite, moveRightLeft 8s 1s 2;
-}
-.combined-effects h3 {
-	animation: pulse 5s 500ms infinite, moveLeftRight 8s 1s 2;
-}
-
-.combined-effects-pulse {
-	animation: pulse 5s 2s linear 2;
-}
-
-.pulse {
-	animation: pulse 5s 2s linear infinite;
-}
-/* Animación para aparecer */
-@keyframes fadeIn {
-	0% {
-		opacity: 0;
-	}
-	100% {
-		opacity: 1;
-	}
-}
-
-/* Animación para crear un efecto de pulso */
-@keyframes pulse {
-	0%,
-	100% {
-		text-shadow: 0 0 5px #007bff, 0 0 10px #007bff, 0 0 15px #007bff;
-	}
-	50% {
-		text-shadow: 0 0 10px #007bff, 0 0 15px #007bff, 0 0 20px #007bff;
-	}
-}
-
-/* Animación para mover de izquierda a derecha */
-@keyframes moveLeftRight {
-	0%,
-	100% {
-		left: 0;
-	}
-	50% {
-		left: -10px;
-	}
-}
-
-/* Animación para mover de derecha a izquierda */
-@keyframes moveRightLeft {
-	0%,
-	100% {
-		right: 0;
-	}
-	50% {
-		right: -10px;
-	}
-}
-
-/* Estilo y animaciones para efectos combinados */
-.combined-effects::before,
-.combined-effects::after {
-	content: "";
-	position: absolute;
-	background-color: var(--color-paleta-principal2);
-	border-radius: 50%;
-	animation: grow 2s 4s forwards, shrink 2s 8s forwards;
-}
-
-.combined-effects::before {
-	top: -20px;
-	left: -20px;
-	width: 10px;
-	height: 10px;
-	animation-delay: 0.2s;
-}
-
-.combined-effects::after {
-	bottom: -20px;
-	right: -20px;
-	width: 10px;
-	height: 10px;
-	animation-delay: 0.4s;
-}
-
-/* Animación para crecer */
-@keyframes grow {
-	0% {
-		transform: scale(0);
-	}
-	100% {
-		transform: scale(1);
-	}
-}
-
-/* Animación para reducir */
-@keyframes shrink {
-	0% {
-		transform: scale(1);
-	}
-	100% {
-		transform: scale(0);
-	}
-}
-
-.imagen {
-	/* Escala al hacer hover */
-	transition: transform 0.3s;
-}
-
-.imagenredonda:hover .imagen {
-	transform: scale(1.3);
-}
-
-.imagen:hover {
-	/* Rotación 3D al hacer hover */
-	transform: rotateY(180deg);
-	transform-style: preserve-3d;
+@keyframes resplandor {
+  0% {
+    text-shadow: 1px 1px 5px var(--color-paleta1), 0 0 10px var(--color-paleta5),
+      0 0 15px #ffef00, 0 0 20px var(--color-paleta4),
+      0 0 25px var(--color-paleta2), 0 0 30px var(--color-paleta5),
+      0 0 35px #ffef00;
+  }
+  50% {
+    text-shadow: 0 0 10px var(--color-paleta1), 0 0 20px var(--color-paleta1),
+      0 0 30px #ffef00, 0 0 40px #ffef00, 0 0 50px var(--color-paleta2),
+      0 0 60px var(--color-paleta1), 0 0 70px #ffef00;
+  }
+  100% {
+    text-shadow: 0 0 5px var(--color-paleta1), 0 0 10px var(--color-paleta1),
+      0 0 15px var(--color-paleta4), 0 0 20px var(--color-paleta4),
+      0 0 25px #ffef00, 0 0 30px #ffef00, 0 0 35px var(--color-paleta4);
+  }
 }
