--- a/estilos/css/utilidades/utilidades.css
+++ b/estilos/css/utilidades/utilidades.css
@@ -4,7 +4,4 @@
 @import url("./contenedores.css");
 
 @import url("./fuentes_textos.css");
-
-.margen__arriba__grande {
-	margin-top: var(--margen-grande);
-}
+@import url("./imagenes.css");
