--- a/html/curriculum/css/index.css
+++ b/html/curriculum/css/index.css
@@ -151,7 +151,7 @@ page[size="A4"] {
 
 /* End Printing */
 
-.contenedor_hoja {
+.container {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -215,19 +215,19 @@ page[size="A4"] {
     margin-right: 0.1cm
 }
 
-.proyectosExperience>ul {
+.workExperience>ul {
     list-style-type: none;
     padding-left: 0;
 }
 
-.proyectosExperience>ul>li {
+.workExperience>ul>li {
     position: relative;
     margin: 0;
     padding-bottom: 0.5cm;
     padding-left: 0.5cm;
 }
 
-.proyectosExperience>ul>li:before {
+.workExperience>ul>li:before {
     background-color: #b8abab;
     width: 0.05cm;
     content: '';
@@ -238,7 +238,7 @@ page[size="A4"] {
     left: 0.05cm;
 }
 
-.proyectosExperience>ul>li::after {
+.workExperience>ul>li::after {
     content: '';
     position: absolute;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' aria-hidden='true' viewBox='0 0 32 32' focusable='false'%3E%3Ccircle stroke='none' fill='%23484444' cx='16' cy='16' r='10'%3E%3C/circle%3E%3C/svg%3E");
@@ -269,7 +269,7 @@ page[size="A4"] {
     margin-bottom: 0;
 }
 
-.proyectosExperience>ul>li ul {
+.workExperience>ul>li ul {
     padding-left: 0.5cm;
     list-style-type: disc;
 }
