--- a/html/curriculum/css/stylesliderandimages.css
+++ b/html/curriculum/css/stylesliderandimages.css
@@ -1,103 +1,101 @@
-/**
- * styleSliderAndImages 
- * Estilos para el efecto de desvanecimiento en el slider
- *
- * @format
- */
+/*  styleSliderAndImages 
+Estilos para el efecto de desvanecimiento en el slider */
 
-.slideshow-contenedor {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: auto;
-	max-width: 100%;
-	width: 100%;
+.slideshow-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  max-width: 100%;
+  width: 100%;
 }
 
-.slideshow__contenedor__text {
-	position: relative;
-	margin: 0;
-	padding: 10px;
-	width: auto;
+.slideshow__container__text {
+  position: relative;
+  margin: 0;
+  padding: 10px;
+  width: auto;
 }
 
 .numbertext {
-	position: relative;
+  position: relative;
 }
 
 .fade {
-	animation-fill-mode: both;
+  animation-fill-mode: both;
 }
 
 @media only screen and (max-width: 500px) {
-	.slideshow__contenedor__text {
-		font-size: 11px;
-	}
+  .slideshow__container__text {
+    font-size: 11px;
+  }
 }
 
 .dot {
-	background-color: #bbb;
-	border-radius: 50%;
-	display: inline-block;
-	height: 13px;
-	margin: 0 2px;
-	transition: background-color 0.6s ease;
-	width: 13px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  height: 13px;
+  margin: 0 2px;
+  transition: background-color 0.6s ease;
+  width: 13px;
 }
 
 .active {
-	background-color: #099620;
+  background-color: #099620;
 }
 
 .fade {
-	-webkit-animation-name: fade;
-	-webkit-animation-duration: 1.5s;
-	animation-name: fade;
-	animation-duration: 1.5s;
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
 }
 
 @-webkit-keyframes fade {
-	from {
-		opacity: 0.4;
-	}
+  from {
+    opacity: .4
+  }
 
-	to {
-		opacity: 1;
-	}
+  to {
+    opacity: 1
+  }
 }
 
 @keyframes fade {
-	from {
-		opacity: 0.4;
-	}
+  from {
+    opacity: .4
+  }
 
-	to {
-		opacity: 1;
-	}
+  to {
+    opacity: 1
+  }
 }
 
 @media only screen and (max-width: 300px) {
-	.text {
-		font-size: 11px;
-	}
+  .text {
+    font-size: 11px
+  }
 }
+
 
 /* Estilos para mostrar imágenes al hacer hover en un enlace */
 
 .enlace {
-	position: relative;
-	display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 
 .enlace .imagen {
-	display: none;
-	position: absolute;
-	z-index: 1;
+  display: none;
+  position: absolute;
+  z-index: 1;
 }
 
 .enlace:hover .imagen {
-	display: block;
+  display: block;
 }
+
 
 /* Estilos para mostrar varias imágenes con diferentes IDs */
 
@@ -106,6 +104,6 @@
 #miImagen3,
 #miImagen4,
 #miImagen5 {
-	display: none;
-	width: 200px;
+  display: none;
+  width: 200px;
 }
